--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,9 @@ hr {
     display: flex;
     justify-content: center;
  }
+
+ .divItem {
+     display: inline-flex;
+     justify-content: space-between;
+     align-items: center;
+ }
